# scsagent

./: .gitignore  pyproject.toml  readme.md  requirements.txt
data/: tableExport.csv
data/doc/: doc_urls.csv  readthedocs_urls.xlsx
docker/: Dockerfile  Dockerfile.py310  Dockerfile.wishbone  buildx.sh
ingest/crawlers/: get_github_installation.py  getdoc_github.py  getdoc_readthedoc.py
src/scsagent/: main.py
src/scsagent/config/: .env.ref  env.py
src/scsagent/core/: debug.py  debug_react_first6.py  tool_call.py
src/scsagent/ingestion/: get_doc.py
src/scsagent/rag/: 1.ipynb
src/scsagent/utils/: log_decorators.py
tests/: build_docker_from_scratch.py  docker_build_results.csv  test.py
tests/query/scratch/: tool_tasktype_query_taskfiltered.xlsx
utils/: crawler.py  database.py
utils/sandbox/: __init__.py  docker_manager.py
